[tool.poetry]
name = "hw-09"
version = "0.1.0"
description = ""
authors = ["MaksymSW <maksym.shvyedkin@gmail.com>"]
license = "MaxSW"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
mongoengine = "^0.29.0"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
